# nonebot-adapter-club255

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
nonebot/adapters/club255/: __init__.py  adapter.py  bean.py  bot.py  bot.pyi  client.py  config.py  data.py  event.py  exception.py  exceptions.py  message.py  permission.py  types.py  utils.py
nonebot_adapter_club255/: __init__.py  adapter.py  bean.py  bot.py  bot.pyi  client.py  config.py  data.py  event.py  exception.py  factory.py  message.py  permission.py  types.py  utils.py
plugins/: show.py
plugins_test/: new_user.py  show.py  test_reply.py
